--- a/base64_pract_000/nbproject/project.properties
+++ b/base64_pract_000/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=base64_pract_000.Base64_pract_000
+main.class=main.Base64_pract_000
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
